--- a/Week 4/style.css
+++ b/Week 4/style.css
@@ -1,11 +1,7 @@
-.header {
-  color: white;
-}
-.quote {
-  color: white;
-  font-size: 15px;
+.page {
+  background-color: pink;
 }
 .img {
-  max-width: 200px;
-  min-width: 50px;
+  max-width: 250px;
+  min-width: 100px;
 }
