Css Update week 5

--- a/wwr/styles/style.css
+++ b/wwr/styles/style.css
@@ -1,23 +1,38 @@
+@import url("https://fonts.googleapis.com/css2?family=Lobster&family=PT+Serif:ital,wght@1,700&family=Sora:wght@200&display=swap");
+
 #content {
   max-width: 1600px;
   margin: 0 auto;
 }
+#logo_link {
+  padding-top: 5px;
+}
 .logo {
   width: 80px;
+  padding-top: 5px;
 }
 .icon {
   width: 80px;
+  padding-top: 10px;
 }
 nav {
   text-align: center;
   color: aliceblue;
   text-decoration: none;
+  padding: 35px;
+}
+nav a {
+  padding: 35px;
 }
 nav a:hover {
   color: aliceblue;
+  padding: 35px;
 }
 .home-title {
   color: aliceblue;
+  font-family: "Lobster", cursive, "PT Serif", serif, "Sora", sans-serif;
+  font-size: 3em;
+  margin-top: 10px;
 }
 #hero img {
   width: 100%;
@@ -37,11 +52,19 @@ h4 {
 main section {
   text-align: center;
 }
+main section img {
+  box-sizing: border-box;
+}
 #background {
   height: 725px;
 }
 body {
   background-color: rgb(151, 232, 252);
+  font-family: TimesNewRoman, Times New Roman, Times, Baskerville, Georgia,
+    serif;
+  font-size: 22px;
+  margin: 0;
+  padding: 0;
 }
 header {
   background-color: rgba(0, 255, 85, 0.281);
@@ -53,11 +76,19 @@ nav a:hover {
   background-color: rgb(151, 232, 252);
   color: aliceblue;
   text-decoration: none;
+  font-size: 18px;
+  padding: 15px 30px;
+  margin-top: 50px;
+  border-radius: 5px;
 }
 .join {
   background-color: rgba(0, 255, 85, 0.281);
   color: royalblue;
   text-decoration: none;
+  font-size: 18px;
+  padding: 15px 30px;
+  margin-top: 50px;
+  border-radius: 5px;
 }
 .book:hover {
   background-color: rgba(0, 255, 85, 0.281);
@@ -72,16 +103,24 @@ nav a:hover {
 }
 .msg {
   background-color: rgba(0, 255, 85, 0.281);
+  line-height: 1.5em;
+  padding: 35px;
 }
 .msg h2 {
   color: royalblue;
+  font-family: "Lobster", cursive, "PT Serif", serif, "Sora", sans-serif;
+  margin: 0;
+  padding-bottom: 15px;
 }
 .msg p {
   color: royalblue;
+  font-size: 0.8em;
 }
 footer {
   background-color: rgba(0, 255, 85, 0.281);
   color: royalblue;
+  padding: 25px 50px;
+  margin-top: 200px;
 }
 footer h3 {
   color: royalblue;
@@ -95,4 +134,19 @@ footer a:hover {
 }
 footer p {
   font-size: 1.2em;
+}
+.social img {
+  padding-top: 15px;
+}
+.rivers-card {
+  margin: 200px 0;
+}
+.camping-card {
+  margin: 200px 0;
+}
+.rapids-card {
+  margin: 200px 0;
+}
+.card-img {
+  border: 10px solid #d782e28e;
 }
