--- a/Week 6/positionstyles.css
+++ b/Week 6/positionstyles.css
@@ -2,171 +2,165 @@
 /* Activity 1 styles */
 .content1 {
   /* This is the parent of the activity 1 boxes. */
-
 }
-.red1 { 
-  width: 100px; 
-  height: 100px; 
-  background-color: red; 
-
-} 
+.red1 {
+  width: 100px;
+  height: 100px;
+  background-color: red;
+}
 .green1 {
-  width: 100px; 
-  height: 100px; 
-  background-color: green; 
-
-} 
+  width: 100px;
+  height: 100px;
+  background-color: green;
+}
 .yellow1 {
-  width: 100px; 
-  height: 100px; 
-  background-color: gold; 
-} 
+  width: 100px;
+  height: 100px;
+  background-color: gold;
+}
 .blue1 {
-  width: 100px; 
-  height: 100px; 
-  background-color: blue; 
-} 
-/* Activity 2 styles */ 
+  width: 100px;
+  height: 100px;
+  background-color: blue;
+}
+/* Activity 2 styles */
 .content2 {
   /* This is the parent of the activity 2 boxes. */
 }
 .red2 {
-  width: 100px; 
-  height: 100px; 
-  background-color: red; 
-} 
-.green2 { 
-  width: 100px; 
-  height: 100px; 
-  background-color: green; 
-} 
+  width: 100px;
+  height: 100px;
+  background-color: red;
+}
+.green2 {
+  width: 100px;
+  height: 100px;
+  background-color: green;
+}
 .yellow2 {
-  width: 100px; 
-  height: 100px; 
-  background-color: gold; 
-} 
+  width: 100px;
+  height: 100px;
+  background-color: gold;
+}
 .blue2 {
-  width: 100px; 
-  height: 100px; 
-  background-color: blue; 
-} 
-/* Activity 3 styles */ 
+  width: 100px;
+  height: 100px;
+  background-color: blue;
+}
+/* Activity 3 styles */
 .content3 {
   /* This is the parent of the activity 3 boxes. */
 }
 .red3 {
-  width: 100px; 
-  height: 100px; 
-  background-color: red; 
-} 
+  width: 100px;
+  height: 100px;
+  background-color: red;
+}
 .green3 {
-  width: 100px; 
-  height: 100px; 
+  width: 100px;
+  height: 100px;
   background-color: green;
-} 
+}
 .yellow3 {
-  width: 100px; 
-  height: 100px; 
-  background-color: gold; 
-} 
+  width: 100px;
+  height: 100px;
+  background-color: gold;
+}
 .blue3 {
   width: 100px;
-  height: 100px; 
-  background-color: blue; 
-} 
-/* Activity 4 styles */ 
+  height: 100px;
+  background-color: blue;
+}
+/* Activity 4 styles */
 .content4 {
   /* This is the parent of the activity 4 boxes. */
   height: 400px;
 }
 .red4 {
-  width: 100px; 
-  height: 100px; 
-  background-color: red; 
-} 
+  width: 100px;
+  height: 100px;
+  background-color: red;
+}
 .green4 {
-  width: 100px; 
-  height: 100px; 
-  background-color: green; 
-} 
+  width: 100px;
+  height: 100px;
+  background-color: green;
+}
 .yellow4 {
-  width: 100px; 
-  height: 100px; 
-  background-color: gold; 
-} 
+  width: 100px;
+  height: 100px;
+  background-color: gold;
+}
 .blue4 {
-  width: 100px; 
-  height: 100px; 
-  background-color: blue; 
-} 
-/* Activity 5 styles */ 
+  width: 100px;
+  height: 100px;
+  background-color: blue;
+}
+/* Activity 5 styles */
 .content5 {
   /* This is the parent of the activity 5 boxes. */
   height: 400px;
 }
-.red5 { 
-  width: 100px; 
-  height: 100px; 
-  background-color: red; 
-} 
-.green5 { 
-  width: 100px; 
-  height: 100px; 
-  background-color: green; 
-
-} 
+.red5 {
+  width: 100px;
+  height: 100px;
+  background-color: red;
+}
+.green5 {
+  width: 100px;
+  height: 100px;
+  background-color: green;
+}
 .yellow5 {
-  width: 100px; 
-  height: 100px; 
-  background-color: gold; 
-
-} 
+  width: 100px;
+  height: 100px;
+  background-color: gold;
+}
 .blue5 {
-  width: 100px; 
-  height: 100px; 
-  background-color: blue; 
-} 
-/* Activity 6 styles */ 
+  width: 100px;
+  height: 100px;
+  background-color: blue;
+}
+/* Activity 6 styles */
 .content6 {
   /* This is the parent of the activity 6 boxes. */
 }
 .red6 {
-  width: 100px; 
-  height: 100px; 
-  background-color: red; 
-} 
+  width: 100px;
+  height: 100px;
+  background-color: red;
+}
 .green6 {
-  width: 100px; 
-  height: 100px; 
-  background-color: green; 
-} 
+  width: 100px;
+  height: 100px;
+  background-color: green;
+}
 .yellow6 {
-  width: 100px; 
-  height: 100px; 
-  background-color: gold; 
-} 
+  width: 100px;
+  height: 100px;
+  background-color: gold;
+}
 .blue6 {
-  width: 100px; 
-  height: 100px; 
-  background-color: blue; 
-} 
-
+  width: 100px;
+  height: 100px;
+  background-color: blue;
+}
 
 /* Do not make any changes below here */
 .activity {
-  width: 70%; 
-  margin: 20px auto; 
-  font-family: Arial, sans-serif; 
-  border: 1px solid black; 
-  padding: 10px; 
-  clear:both; 
+  width: 70%;
+  margin: 20px auto;
+  font-family: Arial, sans-serif;
+  border: 1px solid black;
+  padding: 10px;
+  clear: both;
   overflow: auto;
-} 
+}
 
 .hint {
   border: 1px solid grey;
   background: #e0e0e0;
-  padding: .5em;
+  padding: 0.5em;
   position: relative;
   margin: 1em 0;
 }
@@ -180,7 +174,7 @@
   display: none;
 }
 
-.hint input[type=checkbox] {
+.hint input[type="checkbox"] {
   position: absolute;
   width: 100%;
   height: 100%;
@@ -189,7 +183,7 @@
   cursor: pointer;
 }
 
-.hint input[type=checkbox]:checked ~ div {
+.hint input[type="checkbox"]:checked ~ div {
   display: block;
 }
 
@@ -200,7 +194,8 @@
   right: 10px;
   top: -3px;
 }
-.hint i:before, .hint i:after {
+.hint i:before,
+.hint i:after {
   content: "";
   position: absolute;
   background-color: black;
@@ -214,10 +209,10 @@
   transform: translate(-2px, 0) rotate(-45deg);
 }
 
-.hint input[type=checkbox]:checked ~ i:before {
+.hint input[type="checkbox"]:checked ~ i:before {
   transform: translate(-2px, 0) rotate(45deg);
 }
-.hint input[type=checkbox]:checked ~ i:after {
+.hint input[type="checkbox"]:checked ~ i:after {
   transform: translate(2px, 0) rotate(-45deg);
 }
 .hint a {
