--- a/positionstyles.css
+++ b/positionstyles.css
@@ -1,31 +1,45 @@
 /* CSS - Name: "positionstyles.css" */
 /* Activity 1 styles */
+
+/* I did this project in a half window... */
 .content1 {
   /* This is the parent of the activity 1 boxes. */
+  display: grid;
+  grid-template: 1fr 1fr;
+  justify-items: center;
+  grid-gap: 20px;
 }
 .red1 {
-  width: 100px;
   height: 100px;
+  width: 100%;
   background-color: red;
+  grid-column: 1/3;
 }
 .green1 {
-  width: 100px;
-  height: 100px;
+  width: 200px;
+  height: 200px;
   background-color: green;
+  margin: 20px auto;
 }
 .yellow1 {
-  width: 100px;
-  height: 100px;
+  width: 200px;
+  height: 200px;
   background-color: gold;
+  margin: 0 auto;
 }
 .blue1 {
-  width: 100px;
   height: 100px;
+  width: 100%;
   background-color: blue;
+  margin-top: 20px;
+  grid-column: 1/3;
 }
 /* Activity 2 styles */
 .content2 {
   /* This is the parent of the activity 2 boxes. */
+  display: grid;
+  grid-template-columns: 50px 50px 50px 50px 50px;
+  grid-template-rows: 50px 50px 50px 50px 50px;
 }
 .red2 {
   width: 100px;
@@ -36,65 +50,94 @@
   width: 100px;
   height: 100px;
   background-color: green;
+  z-index: 1;
+  grid-column: 2/4;
+  grid-row: 2/4;
 }
 .yellow2 {
   width: 100px;
   height: 100px;
   background-color: gold;
+  z-index: 2;
+  grid-column: 3/5;
+  grid-row: 3/5;
 }
 .blue2 {
   width: 100px;
   height: 100px;
   background-color: blue;
+  z-index: 3;
+  grid-column: 4/6;
+  grid-row: 4/6;
 }
 /* Activity 3 styles */
 .content3 {
   /* This is the parent of the activity 3 boxes. */
+  display: grid;
+  grid-template-columns: 2fr 70px 2fr;
 }
 .red3 {
-  width: 100px;
+  width: 100%;
   height: 100px;
   background-color: red;
+  grid-column: 1/5;
 }
 .green3 {
-  width: 100px;
-  height: 100px;
+  width: 100%;
+  height: 150px;
   background-color: green;
+  grid-row: 2;
+  grid-column: 1/2;
 }
 .yellow3 {
-  width: 100px;
-  height: 100px;
+  width: 100%;
+  height: 150px;
   background-color: gold;
+  grid-row: 2;
+  grid-column: 3/5;
 }
 .blue3 {
-  width: 100px;
+  width: 100%;
   height: 100px;
   background-color: blue;
+  grid-row: 3;
+  grid-column: 1/5;
 }
 /* Activity 4 styles */
 .content4 {
   /* This is the parent of the activity 4 boxes. */
   height: 400px;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: 1fr 1fr 1fr;
 }
 .red4 {
-  width: 100px;
-  height: 100px;
+  width: 100%;
+  height: 100%;
   background-color: red;
+  grid-column: 1/2;
+  grid-row: 1/4;
 }
 .green4 {
-  width: 100px;
-  height: 100px;
+  width: 100%;
+  height: 100%;
   background-color: green;
+  grid-column: 2/3;
+  grid-row: 1;
 }
 .yellow4 {
-  width: 100px;
-  height: 100px;
+  width: 100%;
+  height: 100%;
   background-color: gold;
+  grid-column: 2/3;
+  grid-row: 2;
 }
 .blue4 {
-  width: 100px;
-  height: 100px;
+  width: 100%;
+  height: 100%;
   background-color: blue;
+  grid-column: 2/3;
+  grid-row: 3;
 }
 /* Activity 5 styles */
 .content5 {
@@ -102,48 +145,66 @@
   height: 400px;
 }
 .red5 {
-  width: 100px;
+  width: 100%;
   height: 100px;
   background-color: red;
+  float: top;
 }
 .green5 {
-  width: 100px;
-  height: 100px;
+  width: 200px;
+  height: 200px;
   background-color: green;
+  z-index: 1;
+  float: left;
 }
 .yellow5 {
-  width: 100px;
-  height: 100px;
+  width: 100%;
+  height: 350px;
   background-color: gold;
 }
 .blue5 {
-  width: 100px;
+  width: 100%;
   height: 100px;
   background-color: blue;
+  float: bottom;
 }
 /* Activity 6 styles */
 .content6 {
   /* This is the parent of the activity 6 boxes. */
+  display: grid;
+  grid-template-columns: 100px 100px 100px 100px 100px 100px;
+  grid-template-rows: 100px 100px 100px 100px 100px 100px;
 }
 .red6 {
-  width: 100px;
-  height: 100px;
+  width: 100%;
+  height: 100%;
   background-color: red;
+  grid-column: 1/4;
+  grid-row: 1/3;
 }
 .green6 {
-  width: 100px;
-  height: 100px;
+  width: 100%;
+  height: 100%;
   background-color: green;
+  z-index: 2;
+  grid-row: 4/6;
+  grid-column: 1/3;
 }
 .yellow6 {
-  width: 100px;
-  height: 100px;
+  width: 100%;
+  height: 100%;
   background-color: gold;
+  z-index: 2;
+  grid-row: 3/6;
+  grid-column: 4/6;
 }
 .blue6 {
-  width: 100px;
-  height: 100px;
+  width: 100%;
+  height: 100%;
   background-color: blue;
+  z-index: 1;
+  grid-column: 2/5;
+  grid-row: 2/5;
 }
 
 /* Do not make any changes below here */
