--- a/wwr/styles/style.css
+++ b/wwr/styles/style.css
@@ -6,10 +6,18 @@
 }
 #logo_link {
   padding-top: 5px;
+  justify-self: center;
+  align-self: center;
+}
+header {
+  background-color: rgba(0, 255, 85, 0.281);
+  display: grid;
+  grid-template-columns: 150px auto;
 }
 .logo {
   width: 80px;
   padding-top: 5px;
+  align-self: center;
 }
 .icon {
   width: 80px;
@@ -20,6 +28,8 @@ nav {
   color: aliceblue;
   text-decoration: none;
   padding: 35px;
+  display: flex;
+  justify-content: space-around;
 }
 nav a {
   padding: 35px;
@@ -34,14 +44,31 @@ nav a:hover {
   font-size: 3em;
   margin-top: 10px;
 }
+#hero {
+  display: grid;
+  grid-template-columns: 1fr 3fr 1fr;
+  margin-top: -100px;
+}
+#hero-box {
+  grid-column: 1/4;
+  grid-row: 1/3;
+  z-index: -1;
+}
+#hero-msg {
+  grid-column: 2/3;
+  grid-row: 1/2;
+  margin-top: 100px;
+}
 #hero img {
   width: 100%;
+  margin-top: -100px;
 }
 #hero-msg h1 {
   text-align: center;
 }
 #hero-msg h4 {
   text-align: center;
+  color: white;
 }
 h4 {
   color: aliceblue;
@@ -51,6 +78,7 @@ h4 {
 }
 main section {
   text-align: center;
+  align-self: center;
 }
 main section img {
   box-sizing: border-box;
@@ -65,9 +93,6 @@ body {
   font-size: 22px;
   margin: 0;
   padding: 0;
-}
-header {
-  background-color: rgba(0, 255, 85, 0.281);
 }
 nav a:hover {
   background-color: rgba(17, 131, 64, 0.753);
@@ -100,11 +125,16 @@ nav a:hover {
 }
 #background {
   background-color: rgba(0, 255, 85, 0.281);
+  grid-column: 1/12;
+  grid-row: 4/10;
 }
 .msg {
   background-color: rgba(0, 255, 85, 0.281);
   line-height: 1.5em;
   padding: 35px;
+  grid-column: 6/10;
+  grid-row: 6/7;
+  box-shadow: 5px 5px 10px rgba(0, 255, 85, 0.281);
 }
 .msg h2 {
   color: royalblue;
@@ -121,6 +151,9 @@ footer {
   color: royalblue;
   padding: 25px 50px;
   margin-top: 200px;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
 }
 footer h3 {
   color: royalblue;
@@ -140,13 +173,88 @@ footer p {
 }
 .rivers-card {
   margin: 200px 0;
+  grid-column: 2/4;
+  grid-row: 2/3;
 }
 .camping-card {
   margin: 200px 0;
+  grid-column: 5/7;
+  grid-row: 2/3;
 }
 .rapids-card {
   margin: 200px 0;
+  grid-column: 8/10;
+  grid-row: 2/3;
 }
 .card-img {
   border: 10px solid #d782e28e;
+  transition: transform 0.5s;
+  box-shadow: 5px 5px 10px #d782e28e;
+}
+.card-img:hover {
+  opacity: 0.6;
+  transform: scale(1.1);
+}
+.card-img,
+.mountains {
+  width: 100%;
+}
+
+.home-grid {
+  display: grid;
+  grid-template-columns: repeat(10, 1fr);
+}
+
+.mountains {
+  width: 100%;
+  grid-column: 2/7;
+  grid-row: 5/8;
+  box-shadow: 5px 5px 10px #6f7364;
+}
+
+@media screen and (max-width: 900px) {
+  #hero,
+  .home-grid {
+    display: block;
+    height: auto;
+  }
+  nav,
+  footer {
+    flex-direction: column;
+  }
+  nav a {
+    display: block;
+    padding: 15px;
+  }
+  #hero {
+    margin-top: 0;
+  }
+  #hero-msg {
+    margin-top: 0;
+  }
+  #hero-msg h4 {
+    display: none;
+  }
+  .home-title {
+    font-size: 25px;
+    color: #6f7364;
+  }
+  .rivers-card,
+  .camping-card,
+  .rapids-card {
+    margin: 50px auto;
+    width: 60%;
+  }
+  #background {
+    display: none;
+  }
+  .mountains,
+  .msg {
+    width: 80%;
+    display: block;
+    margin: 0 auto;
+  }
+  footer {
+    margin-top: 25px;
+  }
 }
