--- a/homepage.css
+++ b/homepage.css
@@ -3,5 +3,14 @@
   font-size: x-large;
   color: teal;
 }
-.week1 {
+a {
+  border: 2px black solid;
+  padding: 10px 2px;
+  background-color: rgb(241, 241, 241);
+}
+
+a:hover {
+  transition: transform 0.25s;
+  box-shadow: 0px 5px 5px 0px;
+  background-color: rgb(209, 209, 209);
 }
