--- a/Hazel_Arts/styles/base.css
+++ b/Hazel_Arts/styles/base.css
@@ -48,57 +48,25 @@ main {
   margin: 0 auto;
 }
 
-.bio {
-  background-color: #b2afc9ff;
-  height: 400px;
-  margin-bottom: 50px;
-}
-.bio h1 {
-  font-family: "Lobster", cursive;
-  text-align: center;
-  padding-top: 25px;
-}
-.bio img {
-  width: 200px;
-  float: right;
-  padding-right: 50px;
-}
-.bio p {
-  text-align: justify;
-  padding: 30px;
-}
-.peekaboo {
-  display: block;
-  margin: 0 auto;
-  padding: 30px;
-  width: 400px;
-  height: 100px;
-  border: solid black 1px;
-}
-.gallary_box {
-  background-color: #b2afc9ff;
-  margin: 0 auto;
-  overflow-x: auto;
-}
-.gallary img {
-  width: 450px;
-  margin: 0px;
-  display: inline;
-}
-
 footer {
   background-color: #d3b883ff;
+  padding: 15px;
+  margin-top: 20px;
+}
+.tm {
+}
+.social {
+}
+.icon {
+  display: inline;
+  font-size: 45px;
+  padding: 10px 30px;
+}
+.footer_links {
+  float: right;
 }
 
 @media screen and (max-width: 900px) {
-  #hero,
-  .home-grid {
-    display: block;
-    height: auto;
-  }
-  header {
-    grid-template-columns: auto;
-  }
   nav,
   footer {
     flex-direction: column;
@@ -107,6 +75,7 @@ footer {
     display: block;
     padding: 15px;
   }
+
   footer {
     margin-top: 25px;
   }
