--- a/Hazel_Arts/styles/base.css
+++ b/Hazel_Arts/styles/base.css
@@ -1,7 +1,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Lobster&family=PT+Serif:ital,wght@1,700&family=Sora:wght@200&display=swap");
-font-family: "Lobster", cursive, "PT Serif", serif, "Sora", sans-serif;
+/* font-family: "Lobster", cursive, "PT Serif", serif, "Sora", sans-serif;
 font-family: "PT Serif", serif;
-font-family: "Sora", sans-serif;
+font-family: "Sora", sans-serif; */
 /* Find a "noteworthy font" for Paragraph stuff on page, ask teacher for help on where to look. */
 PT Serif heding font :root {
   --ghost-white: #f2f1f7ff;
