--- a/Hazel_Arts/styles/base.css
+++ b/Hazel_Arts/styles/base.css
@@ -64,8 +64,8 @@ footer {
   margin-left: 35px;
   font-family: "Sora", sans-serif;
 }
-.social {
-}
+/* .social {
+} */
 .icon {
   display: inline;
   font-size: 45px;
