--- a/Hazel_Arts/styles/base.css
+++ b/Hazel_Arts/styles/base.css
@@ -15,6 +15,8 @@ PT Serif heding font :root {
 body {
   background-color: #7fabaeff;
   margin: 0;
+  color: #f2f1f7ff;
+  font-family: "Lobster", cursive, "PT Serif", serif, "Sora", sans-serif;
 }
 .logo {
   display: block;
