--- a/Hazel_Arts/styles/base.css
+++ b/Hazel_Arts/styles/base.css
@@ -37,6 +37,7 @@ nav {
 }
 nav a {
   padding: 35px;
+  width: 12.5%;
   border-top: solid 5px rgb(192, 167, 118);
   border-bottom: solid 5px rgb(192, 167, 118);
   border-left: solid 2px rgb(192, 167, 118);
@@ -48,6 +49,14 @@ nav a:hover {
   padding: 35px;
 }
 
+.sign_in {
+  padding: 25px;
+}
+
+.sign_in:hover {
+  background-color: #bbd9dbff;
+  padding: 25px;
+}
 nav a p {
   margin: 0 auto;
 }
@@ -65,9 +74,11 @@ footer {
 .tm {
   margin-left: 35px;
   font-family: "Sora", sans-serif;
+  width: 33%;
 }
-/* .social {
-} */
+.social {
+  width: 33%;
+}
 .icon {
   display: inline;
   font-size: 45px;
@@ -78,9 +89,29 @@ footer {
   font-family: "Lobster", cursive, "PT Serif", serif, "Sora", sans-serif;
   text-align: center;
   float: right;
+  width: 66%;
 }
 .footer_links a {
-  margin: 15px;
+  width: 20%;
+  padding: 15px;
+}
+
+@media screen and (max-width: 1383px) {
+  .tos {
+    padding-top: 25px;
+  }
+  .tos:hover {
+    padding-top: 25px;
+  }
+}
+@media screen and (max-width: 1018px) {
+  .tos,
+  .tos:hover {
+    padding-top: 15px;
+  }
+  .sign_in {
+    padding-top: 20px;
+  }
 }
 
 @media screen and (max-width: 900px) {
@@ -88,11 +119,26 @@ footer {
   footer {
     flex-direction: column;
   }
+  nav {
+    height: 520px;
+  }
   nav a {
     display: block;
+    width: 100%;
+    height: 12.5%;
+    padding: 15px;
+    border-top: solid 3px rgb(192, 167, 118);
+    border-bottom: solid 3px rgb(192, 167, 118);
+    border-left: solid 5px rgb(192, 167, 118);
+    border-right: solid 5px rgb(192, 167, 118);
+  }
+  nav a:hover {
     padding: 15px;
   }
-
+  .sign_in,
+  .sign_in:hover {
+    padding: 10px;
+  }
   footer {
     margin-top: 25px;
   }
